feat: atualizar logo e ícone da aplicação

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/barbershop-logo.svg" />
+    <link rel="apple-touch-icon" href="/barbershop-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smooth Cuts - Barbearia Premium | Agendamento Online</title>
     <meta name="description" content="Barbearia premium com 15+ anos de experiência. Cortes tradicionais e modernos, cuidados com barba e tratamentos capilares. Agende online!" />
