Rebrand: Substituir Smooth Cuts por Mateus Barbershop e atualizar imagens dos serviços

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/barbershop-logo.svg" />
     <link rel="apple-touch-icon" href="/barbershop-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smooth Cuts - Barbearia Premium | Agendamento Online</title>
+    <title>Mateus Barbershop - Barbearia Premium | Agendamento Online</title>
     <meta name="description" content="Barbearia premium com 15+ anos de experiência. Cortes tradicionais e modernos, cuidados com barba e tratamentos capilares. Agende online!" />
     <meta name="keywords" content="barbearia, corte de cabelo masculino, barba, agendamento online, barbearia premium, tratamentos capilares" />
-    <meta name="author" content="Smooth Cuts" />
+    <meta name="author" content="Mateus Barbershop" />
 
-    <meta property="og:title" content="Smooth Cuts - Barbearia Premium | Agendamento Online" />
+    <meta property="og:title" content="Mateus Barbershop - Barbearia Premium | Agendamento Online" />
     <meta property="og:description" content="Barbearia premium com 15+ anos de experiência. Cortes tradicionais e modernos, cuidados com barba e tratamentos capilares. Agende online!" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
